Fixed the radar points position and layout, as well as sidebar collapsing feature.

--- a/app/static/styles/styles.css
+++ b/app/static/styles/styles.css
@@ -199,18 +199,18 @@ select {
     height: 100%;
 } */
 
-#points {
+/* #points {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-}
+} */
 
 .point {
-    width: 10px;
-    height: 10px;
-    background-color: red;
+    width: 12px;
+    height: 12px;
+    background-color: maroon;
     border-radius: 50%;
     position: absolute;
     transform: translate(-50%, -50%);
